--- a/frontend/src/components/Navbar/styles.css
+++ b/frontend/src/components/Navbar/styles.css
@@ -1,5 +1,5 @@
 header {
-    height: 60px;
+    height: 80px;
     background-color: var(--color-primary);
     display: flex;
     align-items: center;
@@ -10,6 +10,11 @@ header {
     align-items: center;
     justify-content: space-between;
     color: #fff;
+}
+
+.movie-nav-content img {
+    display: flex;
+    width: 9.2rem;
 }
 
 .movie-nav-content h1 {
@@ -35,5 +40,5 @@ header {
 .movie-contact-container:hover{
     transition:color 0.5s;
     text-decoration: none;
-    color:#2F1C6A;
+    color:#c4c2cc;
 }
