--- a/frontend/src/pages/pagination/styles.css
+++ b/frontend/src/pages/pagination/styles.css
@@ -6,6 +6,10 @@
 
 }
 
+.movie-pagination-container button{
+    color: antiquewhite;
+}
+
 .movie-pagination-box {
     width: 180px;
     display: flex;
