--- a/frontend/src/components/CardMovie/styles.css
+++ b/frontend/src/components/CardMovie/styles.css
@@ -48,6 +48,7 @@
     align-items: center;
     padding: 10px 10px 20px 10px;
     border-radius: 8px 8px 8px 8px;
+    margin-bottom: 135px;
 }
 
 
