--- a/frontend/src/components/MovieScore/styles.css
+++ b/frontend/src/components/MovieScore/styles.css
@@ -2,6 +2,8 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    height: 72px;
+width: 110px;
 }
 
 .movie-score-value {
